--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Snake</h1>
+<div class="snake">
+  <div class="snake_color_1 snake_block">1</div>
+  <div class="snake_color_2 snake_block">2</div>
+  <div class="snake_color_3 snake_block">3</div>
+  <div class="snake_color_4 snake_block">4</div>
+  <div class="snake_color_5 snake_block">5</div>
+  <div class="snake_color_6 snake_block">6</div>
+</div>
 </body>
 </html>
